package br.pucminas.tcc.blackjack;

public enum RoundResult {
    PLAYER_WIN,
    DEALER_WIN,
    DRAW
}
