@startuml
skinparam classAttributeIconSize 0

class Card {
    - rank: String
      - suit: char
        + Card(notation: String)
          + getRank(): String
            + getSuit(): char
              + getValue(): int
}

class Hand {
    - cards: List<Card>
      + Hand()
        + Hand(cards: List<Card>)
          + addCard(card: Card): void
            + getCards(): List<Card>
              + score(): int
                + isBust(): boolean
}

enum RoundResult {
    PLAYER_WIN
      DEALER_WIN
        DRAW
}

class BlackjackEvaluator {
    + compare(player: Hand, dealer: Hand): RoundResult
}

Hand *-- "0..*" Card
BlackjackEvaluator ..> Hand
BlackjackEvaluator ..> RoundResult
@enduml

}
}
}
}